--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     height: auto;
 }
 </style>
-<img src="
+<img src="https://github.com/user-attachments/assets/0d033400-0068-447a-b420-5138072c10a4" class="respponsive-img">
 body {
     background-color: #f5f5dc; 
     color: #8b4513; 
